# demux-cpp

./: .clang-format  .clang-tidy  .envrc  .gitignore  CMakeLists.txt  README.md  clang-tidy-report.txt  conanfile.py  conanfile.txt  sequencer.plist
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
doc/: ShmSequencerUpstream.drawio
doc/adr/: ADR-template.md  ADR001.md  ADR002.md  ADR003.md
doc/draft-01/: ShmSequencerDownstream.drawio
etc/conan2/profiles/: clang
example/: demux_util.h  domain.h  hdr_histogram_util.h  market_data.cpp  market_data.h  shm_demux.cpp  shm_demux.h  shm_demux_pub.cpp  shm_demux_sub.cpp  xxhash_util.h
src/: CMakeLists.txt  assertion_util.h  atomic_util.h  demultiplexer.cpp  demultiplexer.h  domain.cpp  domain.h  main.cpp  message_buffer.h  multiplexer.cpp  multiplexer.h  schema.fbs  schema_generated.h  sequencer.cpp  sequencer.h  util.h
src/demux/: demultiplexer.h  subscriber_id.h
src/demux/core/: demultiplexer.cpp  demultiplexer.h  endpoint_id.cpp  endpoint_id.h  message_buffer.h  reader_id.cpp  reader_id.h  subscriber_id.h
src/demux/example/: market_data.h  shm_demux.cpp  shm_demux.h
src/demux/test/: demultiplexer_allocate_test.cpp  demultiplexer_test.cpp  endpoint_id_gen.h  endpoint_id_test.cpp  message_buffer_test.cpp  reader_id_gen.h  reader_id_test.cpp  reader_id_test.h  shm_util_test.cpp
src/demux/util/: boost_log_util.h  hdr_histogram_util.h  shm_remover.h  shm_util.h  tuple_util.h  xxhash_util.h
src/example/: market_data.cpp  market_data.h  shm_demux.cpp  shm_demux.h
src/main/: demultiplexer.h  domain.cpp
src/test/: demultiplexer_test.cpp  domain_test.cpp  domain_test.h  message_buffer_test.cpp  reader_id_test.cpp  reader_id_test.h  subscriber_id_test.cpp  subscriber_id_test.h
src/util/: hdr_histogram_util.h  xxhash_util.h
test/: demultiplexer_test.cpp  domain_test.cpp  domain_test.h  message_buffer_test.cpp  multiplexer_test.cpp  sequencer_test.cpp
